--- a/phpspec.yml
+++ b/phpspec.yml
@@ -2,3 +2,6 @@ suites:
     vodel_suite:
         namespace: Vodel
         psr4_prefix: Vodel
+
+extensions:
+    - PhpSpec\Extension\CodeCoverageExtension
