--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "zumb/vodel",
     "require-dev": {
         "phpspec/phpspec": "^2.5",
-        "phpspec/prophecy": "^1.6",
-        "henrikbjorn/phpspec-code-coverage": "^2.0"
+        "phpspec/prophecy": "^1.6"
     },
     "autoload": {
         "psr-4": {
