Fail validation with null parameter, changed namespace

--- a/phpspec.yml
+++ b/phpspec.yml
@@ -1,4 +1,4 @@
 suites:
     vodel_suite:
-        namespace: Vodel
-        psr4_prefix: Vodel
+        namespace: Zumb\Vodel
+        psr4_prefix: Zumb\Vodel
